ci($CODECLIMATE): Code climate rules
Excluding generated files, and added only java files on src

Code Climate configuration

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,10 +3,13 @@ engines:
     enabled: true
     channel: "beta"
     config: 'checkstyle.xml'
+    exclude_paths:
+    - "**/gen/**"
   pmd:
     enabled: true
     channel: "beta"
 
 ratings:
   paths:
-  - "**.java"
+  - "src"
+  - "**/*.java"
